--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.mat filter=lfs diff=lfs merge=lfs -text
 popStat.Rda filter=lfs diff=lfs merge=lfs -text
+*.Rda filter=lfs diff=lfs merge=lfs -text
